--- a/courses.html
+++ b/courses.html
@@ -17,83 +17,78 @@
     <body>
     <!-- Courses Section -->
     <section class="courses">
-   <section class="courses">
         <div class="container">
-            <h2 class="section-title">Our Most Popular Offers</h2>
-            <div class="courses-grid">
+            <h2 class="section-title">عروضنا </h2>
+            <div class="courses-grid" href="register.html">
                 <!-- Course 1 -->
                 <div class="course-card">
-                    <div class="course-badge">Best Seller</div>
+                    <div class="course-badge">الأكثر مبيعاً</div>
                     <div class="course-image">
-                        <img src="source/algo2.gif" alt="Python Course">
+                        <img src="source/algo2.gif" alt="دورة البايثون">
                     </div>
                     <div class="course-content">
-                        <h3>IT Review</h3>
-                        <p class="course-description">Learn the basics from A to Z in a simple and clear language. Everything you need to succeed in IT.</p>
+                        <h3> مراجعة الإعلامية  </h3>
+                        <p class="course-description"> تعلم الأساسيات من الألف للياء بلغة سهلة وواضحة كل شي اللي تحتاجه للنجاح في الإعلامية</p>
                         <div class="course-meta">
-                            <span class="course-duration">30 hours</span>
-                            <span class="course-level">2nd / 3rd / Bac</span>
+                            <span class="course-duration">30 ساعة</span>
+                            <span class="course-level">2éme / 3éme / Bac </span>
                         </div>
                         <div class="course-rating">
                             <span class="stars">★★★★★</span>
                             <span class="rating-count"></span>
                         </div>
                         <div class="course-price">
-                            <span class="price">Available Now</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <span class="price">متوفر الآن</span>
+                            <a href="register.html" class="btn enroll-btn">سجل الآن</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Course 2 -->
                 <div class="course-card">
-                    <div class="course-badge">New</div>
+                    <div class="course-badge">جديد</div>
                     <div class="course-image">
-                        <img src="source/soon1.jpg" alt="Web Course">
+                        <img src="source/soon1.jpg" alt="دورة الويب">
                     </div>
                     <div class="course-content">
-                        <h3>Web Challenge</h3>
-                        <p class="course-description">Your complete guide to passing STI exams: a must for every student.</p>
+                        <h3> تحدي الويب </h3>
+                        <p class="course-description"> دليلك الشامل لاجتياز اختبارات STI: واجبٌ على كل تلميذ</p>
                         <div class="course-meta">
-                            <span class="course-duration">20 hours</span>
-                            <span class="course-level">3rd / Bac IT</span>
+                            <span class="course-duration">20 ساعة</span>
+                            <span class="course-level">3éme / Bac informatique</span>
                         </div>
                         <div class="course-rating">
                             <span class="stars"></span>
                             <span class="rating-count"></span>
                         </div>
                         <div class="course-price">
-                            <span class="price">Available Now</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <span class="price">متوفر الآن</span>
+                            <a href="register.html" class="btn enroll-btn">سجل الآن</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Course 3 -->
                 <div class="course-card">
-                    <div class="course-badge">New</div>
+                    <div class="course-badge">جديد</div>
                     <div class="course-image">
-                        <img src="source/graphique.jfif" alt="Graphic Design Course">
+                        <img src="source/graphique.jfif" alt="دورة الويب">
                     </div>
                     <div class="course-content">
-                        <h3>Graphic Designer Course</h3>
-                        <p class="course-description">Learn HTML, CSS, JavaScript to build websites.</p>
+                        <h3>دورة Graphique Desinger</h3>
+                        <p class="course-description">تعلم HTML, CSS, JavaScript لبناء مواقع الويب</p>
                         <div class="course-meta">
-                            <span class="course-duration">20 hours</span>
-                            <span class="course-level">Intermediate</span>
+                            <span class="course-duration">20 ساعة</span>
+                            <span class="course-level">متوسط</span>
                         </div>
                         <div class="course-rating">
                             <span class="stars"></span>
                             <span class="rating-count"></span>
                         </div>
                         <div class="course-price">
-                            <span class="price">Coming Soon</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <span class="price">قريبا</span>
+                            <a href="register.html" class="btn enroll-btn">سجل الآن</a>
                         </div>
-                    </div>
-                </div>
-            </div>
-
                     </div>
                 </div>
             </div>
