--- a/Accueil.html
+++ b/Accueil.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="googlebot-news" content="notranslate">
-    <meta name="description" content="Eli Class: A specialized IT training platform offering online courses. Master programming, Python, Excel, and more with our instructors.">
-    <title>Eli Class</title>
+    <meta name="description" content="synta academy : plateforme de formation spécialisé en informatique offrant des cours en ligne . Maîtrisez la programmation, python, excel et plus avec nos profs">
+    <title>Synta Academy</title>
     <link rel="icon" href="source/logoweb.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,15 +19,15 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Start Your Programming Journey with Eli Class</h1>
-                <p>Our platform offers a complete and new experience in learning programming for students or anyone interested in developing their IT skills.</p>
+                <h1>ابدأ رحلتك في عالم البرمجة مع سينتى أكادمي</h1>
+                <p>تقدم لكم منصتنا تجرب متكملة وجديدة في تعلم البرجمة لتلاميذة أو حتى للمهتمين بتطوير مهارتهم في الإعلامية</p>
                 <div class="hero-buttons">
-                    <a href="register.html" class="btn primary-btn">Discover Our Offers</a>
-                    <a href="register.html" class="btn secondary-btn">Try for Free</a>
+                    <a href="register.html" class="btn primary-btn">اكتشف عروضنا</a>
+                    <a href="register.html" class="btn secondary-btn">جرب مجاناً</a>
                 </div>
             </div>
             <div class="hero-image">
-                <img src="source/hero.png" alt="Learn Programming">
+                <img src="source/hero.png" alt="تعلم البرمجة">
             </div>
         </div>
     </section>
@@ -35,82 +35,82 @@
     <!-- Courses Section -->
     <section class="courses">
         <div class="container">
-            <h2 class="section-title">Our Most Popular Offers</h2>
+            <h2 class="section-title">عروضنا الأكثر طلباً</h2>
             <div class="courses-grid">
                 <!-- Course 1 -->
                 <div class="course-card">
-                    <div class="course-badge">Best Seller</div>
+                    <div class="course-badge">الأكثر مبيعاً</div>
                     <div class="course-image">
-                        <img src="source/algo2.gif" alt="Python Course">
+                        <img src="source/algo2.gif" alt="دورة البايثون">
                     </div>
                     <div class="course-content">
-                        <h3>IT Review</h3>
-                        <p class="course-description">Learn the basics from A to Z in a simple and clear language. Everything you need to succeed in IT.</p>
+                        <h3> مراجعة الإعلامية  </h3>
+                        <p class="course-description"> تعلم الأساسيات من الألف للياء بلغة سهلة وواضحة كل شي اللي تحتاجه للنجاح في الإعلامية</p>
                         <div class="course-meta">
-                            <span class="course-duration">30 hours</span>
-                            <span class="course-level">2nd / 3rd / Bac</span>
+                            <span class="course-duration">30 ساعة</span>
+                            <span class="course-level">2éme / 3éme / Bac </span>
                         </div>
                         <div class="course-rating">
                             <span class="stars">★★★★★</span>
                             <span class="rating-count"></span>
                         </div>
                         <div class="course-price">
-                            <span class="price">Available Now</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <span class="price">متوفر الآن</span>
+                            <a href="register.html" class="btn enroll-btn">سجل الآن</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Course 2 -->
                 <div class="course-card">
-                    <div class="course-badge">New</div>
+                    <div class="course-badge">جديد</div>
                     <div class="course-image">
-                        <img src="source/soon1.jpg" alt="Web Course">
+                        <img src="source/soon1.jpg" alt="دورة الويب">
                     </div>
                     <div class="course-content">
-                        <h3>Web Challenge</h3>
-                        <p class="course-description">Your complete guide to passing STI exams: a must for every student.</p>
+                        <h3> تحدي الويب </h3>
+                        <p class="course-description"> دليلك الشامل لاجتياز اختبارات STI: واجبٌ على كل تلميذ</p>
                         <div class="course-meta">
-                            <span class="course-duration">20 hours</span>
-                            <span class="course-level">3rd / Bac IT</span>
+                            <span class="course-duration">20 ساعة</span>
+                            <span class="course-level">3éme / Bac informatique</span>
                         </div>
                         <div class="course-rating">
                             <span class="stars"></span>
                             <span class="rating-count"></span>
                         </div>
                         <div class="course-price">
-                            <span class="price">Available Now</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <span class="price">متوفر الآن</span>
+                            <a href="register.html" class="btn enroll-btn">سجل الآن</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Course 3 -->
                 <div class="course-card">
-                    <div class="course-badge">New</div>
+                    <div class="course-badge">جديد</div>
                     <div class="course-image">
-                        <img src="source/graphique.jfif" alt="Graphic Design Course">
+                        <img src="source/graphique.jfif" alt="دورة الويب">
                     </div>
                     <div class="course-content">
-                        <h3>Graphic Designer Course</h3>
-                        <p class="course-description">Learn HTML, CSS, JavaScript to build websites.</p>
+                        <h3>دورة Graphique Desinger</h3>
+                        <p class="course-description">تعلم HTML, CSS, JavaScript لبناء مواقع الويب</p>
                         <div class="course-meta">
-                            <span class="course-duration">20 hours</span>
-                            <span class="course-level">Intermediate</span>
+                            <span class="course-duration">20 ساعة</span>
+                            <span class="course-level">متوسط</span>
                         </div>
                         <div class="course-rating">
                             <span class="stars"></span>
                             <span class="rating-count"></span>
                         </div>
                         <div class="course-price">
-                            <span class="price">Coming Soon</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <span class="price">قريبا</span>
+                            <a href="register.html" class="btn enroll-btn">سجل الآن</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="view-all">
-                <a href="courses.html" target="Principal" class="btn view-all-btn">View All Offers</a>
+                <a href="courses.html" target="Principal" class="btn view-all-btn">عرض جميع عروضنا</a>
             </div>
         </div>
     </section>
@@ -118,27 +118,27 @@
     <!-- Features Section -->
     <section class="features">
         <div class="container">
-            <h2 class="section-title">Why Choose Eli Class?</h2>
+            <h2 class="section-title">لماذا تختار أكاديميتنا؟</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">📚</div>
-                    <h3>Comprehensive Curricula</h3>
-                    <p>Courses specially designed for students according to their academic level.</p>
+                    <h3>مناهج متكاملة</h3>
+                    <p>دورات مصممة خصيصاً لتلاميذة حسب مستواهم الدراسي</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">👨‍🏫</div>
-                    <h3>Expert Teachers</h3>
-                    <p>Learn from professional teachers in programming and algorithms.</p>
+                    <h3>أساتذة خبراء</h3>
+                    <p>تعلم من أساتذة  محترفين في مجال البرمجة والخوارزميات</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">💻</div>
-                    <h3>Practical Exercises</h3>
-                    <p>Exercises and practical applications after each lesson to reinforce knowledge.</p>
+                    <h3>تمارين عملية</h3>
+                    <p>تمارين وتطبيقات عملية بعد كل درس لترسيخ المعلومة</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">📱</div>
-                    <h3>Learn Anytime</h3>
-                    <p>Courses available 24/7 so you can learn at your own pace.</p>
+                    <h3>تعلم في أي وقت</h3>
+                    <p>دورات متاحة على مدار الساعة تتعلم حسب وقتك</p>
                 </div>
             </div>
         </div>
