--- a/user.html
+++ b/user.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Synta Academy - Home </title>
+    <title>Eli Class - Home</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,45 +20,45 @@
     <div class="sidebar">
         <div class="logo">
             <div class="logo-icon">
-                <img src="source/logosynta.png" alt="synta academy" width="55">
+                <img src="source/eliclass.png" alt="Eli Class" width="55">
             </div>
-            <span class="logo-text"> Synta Academy</span>
+            <span class="logo-text">Eli Class</span>
         </div>
         <ul class="nav-links">
             <li><a href="#" onclick="loadPage('dashboard')" class="active">
                 <div class="nav-icon"><i class="fas fa-home"></i></div>
-                <span class="nav-text">لوحة التحكم</span>
+                <span class="nav-text">Dashboard</span>
             </a></li>
             <li><a href="#" onclick="loadPage('profile')">
                 <div class="nav-icon"><i class="fas fa-user"></i></div>
-                <span class="nav-text">الملف الشخصي</span>
+                <span class="nav-text">Profile</span>
             </a></li>
             <li><a href="#" onclick="loadPage('courses')">
                 <div class="nav-icon"><i class="fas fa-book"></i></div>
-                <span class="nav-text">الدورات</span>
+                <span class="nav-text">Courses</span>
             </a></li>
             <li><a href="#" onclick="loadPage('offers')">
                 <div class="nav-icon"><i class="fas fa-gift"></i></div>
-                <span class="nav-text">العروض</span>
+                <span class="nav-text">Offers</span>
             </a></li>
             <li><a href="#" onclick="loadPage('game')">
                 <div class="nav-icon"><i class="fas fa-gamepad"></i></div>
-                <span class="nav-text">لعبة التعلم</span>
+                <span class="nav-text">Learning Game</span>
             </a></li>
             <li><a href="#" onclick="loadPage('chatbot')">
                 <div class="nav-icon"><i class="fas fa-robot"></i></div>
-                <span class="nav-text">المساعد الذكي</span>
+                <span class="nav-text">Smart Assistant</span>
             </a></li>
             <li><a href="#" onclick="logout()" style="margin-top: 2rem; border-top: 1px solid #eee; padding-top: 1rem;">
                 <div class="nav-icon"><i class="fas fa-sign-out-alt"></i></div>
-                <span class="nav-text">تسجيل الخروج</span>
+                <span class="nav-text">Logout</span>
             </a></li>
         </ul>
     </div>
     
     <!-- Main Content Area -->
     <section>
-        <iframe src="pages/dashboard/dashboard.html" name="Principal" title="المنطقة الرئيسية"></iframe>
+        <iframe src="pages/dashboard/dashboard.html" name="Principal" title="Main Area"></iframe>
     </section>
 
     <!-- Scripts -->
