--- a/user.html
+++ b/user.html
@@ -29,26 +29,19 @@
                 <div class="nav-icon"><i class="fas fa-home"></i></div>
                 <span class="nav-text">Dashboard</span>
             </a></li>
-            <li><a href="#" onclick="loadPage('student')">
+            <li><a href="#" onclick="loadPage('Students')">
                 <div class="nav-icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
                 <span class="nav-text">Students</span>
             </a></li>
-            <li><a href="#" onclick="loadPage('courses')">
+            <li><a href="#" onclick="loadPage('teachers')">
                 <div class="nav-icon"><i class="fa-solid fa-user-tie"></i></div>
                 <span class="nav-text">Teachers</span>
             </a></li>
-            <li><a href="#" onclick="loadPage('offers')">
-                <div class="nav-icon"><i class="fa-solid fa-video"></i></div>
+            <li><a href="#" onclick="loadPage('sessions')">
+                <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
                 <span class="nav-text">Sessions</span>
             </a></li>
-            <li><a href="#" onclick="loadPage('game')">
-                <div class="nav-icon"><i class="fas fa-gamepad"></i></div>
-                <span class="nav-text">Learning Game</span>
-            </a></li>
-            <li><a href="#" onclick="loadPage('chatbot')">
-                <div class="nav-icon"><i class="fas fa-robot"></i></div>
-                <span class="nav-text">Smart Assistant</span>
-            </a></li>
+            
             <li><a href="#" onclick="logout()" style="margin-top: 2rem; border-top: 1px solid #eee; padding-top: 1rem;">
                 <div class="nav-icon"><i class="fas fa-sign-out-alt"></i></div>
                 <span class="nav-text">Logout</span>
