--- a/pages/Students/students.html
+++ b/pages/Students/students.html
@@ -7,13 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../css/dashboard.css">
   <link rel="stylesheet" href="../../css/auth.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     .students-header { display:flex; justify-content: space-between; align-items:center; position: sticky; top: 0; z-index: 20; background: transparent; padding: 16px 0; border-bottom: 1px solid #e9ecef; }
     .section-title { position: sticky; top: 0; z-index: 25; background: transparent; padding: 8px 0; margin: 0; }
     .filters { display:flex; gap: 10px; align-items:center; }
     .filters select, .filters input { padding: 8px 10px; border:1px solid #ddd; border-radius:10px; font-family:'Tajawal', sans-serif; }
-    .table-container { background:#fff; border-radius:14px; overflow:hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    .students-table { width:100%; border-collapse:collapse; font-family:'Tajawal', sans-serif; }
+    .table-container { background:#fff; border-radius: 20px 20px 0 0; overflow:hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1); height: calc(100vh - 200px); display: flex; flex-direction: column; }
+    .students-table { width:100%; border-collapse:collapse; font-family:'Tajawal', sans-serif; height: 100%; display: block; }
+    .students-table tbody { display: block; height: calc(100vh - 280px); overflow-y: auto; }
+    .students-table thead, .students-table tbody tr { display: table; width: 100%; table-layout: fixed; }
     .students-table th { background:#f8f9fa; padding:16px 12px; text-align:left; font-weight:600; color:#333; border-bottom:2px solid #e9ecef; }
     .students-table td { padding:16px 12px; border-bottom:1px solid #e9ecef; color:#555; }
     .students-table tr:hover { background:#f8f9fa; }
@@ -21,18 +24,29 @@
     .badge { padding:4px 10px; border-radius:999px; background:#fff3e0; color:#F6851F; font-weight:600; font-size: 12px; }
     .actions { display:flex; gap:8px; align-items:center; }
     .btn { padding:6px 12px; border:none; border-radius:8px; cursor:pointer; font-weight:600; font-family:'Tajawal', sans-serif; font-size:12px; }
-    .btn.primary { background: linear-gradient(45deg, #ff7b1a, #ffa500); color:#fff; }
+    .btn.primary { background: linear-gradient(45deg, #1a63ff, #4a90e2); color:#fff; }
     .btn.secondary { background:#eef1f4; color:#333; }
+    .btn.danger { background: linear-gradient(45deg, #dc3545, #c82333); color:#fff; }
     .empty { text-align:center; color:#6c757d; padding:40px; font-style:italic; }
-    .pagination-container { display: flex; justify-content: space-between; align-items: center; margin-top: 16px; padding: 16px; background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    .pagination-container { display: flex; justify-content: space-between; align-items: center; margin-top: 16px; padding: 16px; background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); position: sticky; bottom: 0; z-index: 10; }
     .pagination-info { color: #666; font-size: 14px; }
     .pagination-buttons { display: flex; align-items: center; gap: 12px; }
     .page-numbers { display: flex; gap: 8px; }
     .page-number { padding: 8px 12px; border: 1px solid #ddd; border-radius: 6px; cursor: pointer; font-size: 14px; background: #fff; }
-    .page-number.active { background: linear-gradient(45deg, #ff7b1a, #ffa500); color: #fff; border-color: #ff7b1a; }
+    .page-number.active { background: linear-gradient(45deg, #1a63ff, #4a90e2); color: #fff; border-color: #1a63ff; }
     .page-number:hover:not(.active) { background: #f8f9fa; }
-    .modal-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); display: none; align-items: center; justify-content: center; z-index: 9999; }
-    .modal-overlay.open { display: flex; }
+    .modal-overlay { 
+      position: fixed; 
+      inset: 0; 
+      background: rgba(0,0,0,0.5); 
+      display: none; 
+      align-items: center; 
+      justify-content: center; 
+      z-index: 9999; 
+    }
+    .modal-overlay.open { 
+      display: flex; 
+    }
     .modal { background: #fff; width: min(700px, 95vw); border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.15); overflow: hidden; font-family: 'Tajawal', sans-serif; }
     .modal-header { display: flex; align-items: center; justify-content: space-between; padding: 16px 20px; border-bottom: 1px solid #eee; background: #fafafa; }
     .modal-header h3 { margin: 0; font-size: 18px; }
@@ -65,7 +79,6 @@
     }
     body.modal-open { overflow: hidden; }
   </style>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="dashboard-container">
@@ -82,6 +95,8 @@
             </select>
             <input type="text" id="search-students" placeholder="Search students..." />
             <button class="btn primary" id="add-student-btn">+ Add Student</button>
+            <button class="btn secondary" id="test-students-btn" style="background: #28a745; color: white;">Test Students</button>
+            <button class="btn secondary" id="test-groups-btn" style="background: #17a2b8; color: white;">Test Groups</button>
           </div>
         </div>
 
@@ -92,9 +107,9 @@
                 <th>Name</th>
                 <th>Email</th>
                 <th>Phone</th>
+                <th>Level</th>
                 <th>Class</th>
                 <th>Branch</th>
-                <th>Created At</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -229,6 +244,7 @@
       </div>
     </div>
   </div>
+
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="../../authentication.js"></script>
