--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -15,47 +15,48 @@
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
   <!-- Supabase -->
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <!-- Configuration -->
+  <script src="../../config.js"></script>
 </head>
 <body>
   <div class="dashboard-container">
-    <!-- Header -->
-    <div class="dashboard-header">
-      <div class="welcome-section">
-        <div class="user-info">
-          <div class="user-avatar" id="user-avatar">A</div>
-          <div class="user-details">
-            <h2>Welcome, <span id="user-name">Loading...</span> 👋</h2>
-            <p id="user-email">Fetching data...</p>
-          </div>
-        </div>
-        <div class="date-info">
-          <div id="current-date">Loading...</div>
-          <div id="current-time">--:--</div>
-        </div>
-      </div>
-      <!-- Stats -->
-      <div class="stats-grid">
-        <div class="stat-card">
-          <span class="stat-number" id="completed-courses">0</span>
-          <span class="stat-label">Total Students</span>
-        </div>
-        <div class="stat-card">
-          <span class="stat-number" id="overall-progress">0</span>
-          <span class="stat-label">Total Teachers</span>
-        </div>
-        <div class="stat-card">
-          <span class="stat-number" id="achievements">0</span>
-          <span class="stat-label">Events</span>
-        </div>
-        <div class="stat-card">
-          <span class="stat-number" id="active-days">0</span>
-          <span class="stat-label">Invoices</span>
-        </div>
-      </div>
-    </div>
-
     <!-- Content -->
     <div class="dashboard-content">
+      <!-- Header -->
+      <div class="dashboard-header">
+        <div class="welcome-section">
+          <div class="user-info">
+            <div class="user-avatar" id="user-avatar">A</div>
+            <div class="user-details">
+              <h2>Welcome, <span id="user-name">Loading...</span> 👋</h2>
+              <p id="user-email">Fetching data...</p>
+            </div>
+          </div>
+          <div class="date-info">
+            <div id="current-date">Loading...</div>
+            <div id="current-time">--:--</div>
+          </div>
+        </div>
+        <!-- Stats -->
+        <div class="stats-grid">
+          <div class="stat-card">
+            <span class="stat-number" id="total-students">0</span>
+            <span class="stat-label">Total Students</span>
+          </div>
+          <div class="stat-card">
+            <span class="stat-number" id="total-teachers">0</span>
+            <span class="stat-label">Total Teachers</span>
+          </div>
+          <div class="stat-card">
+            <span class="stat-number" id="total-events">0</span>
+            <span class="stat-label">Total Classes</span>
+          </div>
+          <div class="stat-card">
+            <span class="stat-number" id="total-invoices">0</span>
+            <span class="stat-label">Class Enrollments</span>
+          </div>
+        </div>
+      </div>
       <div class="content-grid">
         <div class="main-content">
           <!-- Performance -->
@@ -75,15 +76,16 @@
           <!-- Finance -->
           <div class="card">
             <h3 class="section-title">📊 Finance</h3>
-            <canvas id="financeChart"></canvas>
+            <div class="chart-container">
+              <canvas id="financeChart"></canvas>
+            </div>
           </div>
 
-          <!-- Upcoming Events -->
+          <!-- Upcoming Sessions -->
           <div class="card">
-            <h3 class="section-title">🔔 Upcoming Events</h3>
-            <ul id="events-list">
-              <li>Math Workshop - Tomorrow</li>
-              <li>Science Fair - Next Week</li>
+            <h3 class="section-title">🔔 Upcoming Sessions</h3>
+            <ul id="sessions-list">
+              <li>Loading today's sessions...</li>
             </ul>
           </div>
         </div>
