--- a/Accueil.html
+++ b/Accueil.html
@@ -22,8 +22,8 @@
                 <h1>Start Your Programming Journey with Eli Class</h1>
                 <p>Our platform offers a complete and new experience in learning programming for students or anyone interested in developing their IT skills.</p>
                 <div class="hero-buttons">
-                    <a href="register.html" class="btn primary-btn">Discover Our Offers</a>
-                    <a href="register.html" class="btn secondary-btn">Try for Free</a>
+                    <a href="register.html" class="btn primary-btn">Join Your Class</a>
+                    <a href="register.html" class="btn secondary-btn">Create Student Account</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -35,7 +35,7 @@
     <!-- Courses Section -->
     <section class="courses">
         <div class="container">
-            <h2 class="section-title">Our Most Popular Offers</h2>
+            <h2 class="section-title">Classes and Tracks</h2>
             <div class="courses-grid">
                 <!-- Course 1 -->
                 <div class="course-card">
@@ -56,7 +56,7 @@
                         </div>
                         <div class="course-price">
                             <span class="price">Available Now</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <a href="register.html" class="btn enroll-btn">Join Class</a>
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="course-price">
                             <span class="price">Available Now</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <a href="register.html" class="btn enroll-btn">Join Class</a>
                         </div>
                     </div>
                 </div>
@@ -104,13 +104,13 @@
                         </div>
                         <div class="course-price">
                             <span class="price">Coming Soon</span>
-                            <a href="register.html" class="btn enroll-btn">Enroll Now</a>
+                            <a href="register.html" class="btn enroll-btn">Get Notified</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="view-all">
-                <a href="courses.html" target="Principal" class="btn view-all-btn">View All Offers</a>
+                <a href="courses.html" target="Principal" class="btn view-all-btn">View All Classes</a>
             </div>
         </div>
     </section>
