--- a/user.html
+++ b/user.html
@@ -29,11 +29,11 @@
                 <div class="nav-icon"><i class="fas fa-home"></i></div>
                 <span class="nav-text">Dashboard</span>
             </a></li>
-            <li><a href="#" onclick="loadPage('Students')">
+            <li><a href="#" onclick="loadPage('students')">
                 <div class="nav-icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
                 <span class="nav-text">Students</span>
             </a></li>
-            <li><a href="#" onclick="loadPage('teachers')">
+            <li><a href="#" onclick="loadPage('Teachers')">
                 <div class="nav-icon"><i class="fa-solid fa-user-tie"></i></div>
                 <span class="nav-text">Teachers</span>
             </a></li>
