--- a/user.html
+++ b/user.html
@@ -29,7 +29,7 @@
                 <div class="nav-icon"><i class="fas fa-home"></i></div>
                 <span class="nav-text">Dashboard</span>
             </a></li>
-            <li><a href="#" onclick="loadPage('students')">
+            <li><a href="#" onclick="loadPage('Students')">
                 <div class="nav-icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
                 <span class="nav-text">Students</span>
             </a></li>
@@ -87,3 +87,4 @@
     <script src="js/user.js"></script>
 </body>
 </html>
+
